--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,16 @@
 {
    "manifest_version": 2,
    "name": "My Cool Extension",
-   "version": "0.1"
+   "version": "0.1",
+   "content_scripts": [
+      {
+         "matches": [
+            "<all_urls>"
+         ],
+         "js": [
+            "jquery-1.12.4.min.js",
+            "content.js"
+         ]
+      }
+   ]
 }
