--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,14 @@
             "content.js"
          ]
       }
-   ]
+   ],
+   "browser_action": {
+      "default_icon": "/images/get_started48.png"
+   },
+   "background": {
+      "scripts": [
+         "jquery-1.12.4.min.js",
+         "background.js"
+      ]
+   }
 }
