--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+   "_LICENSE": "Copyright (c) 2021, Sergio Ponce De Leon. All rights reserved.  This source code is licensed under the BSD-style license found in the LICENSE file in the root directory of this source tree.",
    "manifest_version": 2,
    "name": "My Cool Extension",
    "version": "0.1",
